
This file shows the changes in recent releases of MODx. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Add fix for ie9 to get tree nodes to work properly
- Prevent Category ACL queries on Elements if no entries for current context
- [#2601] Improve text and drag/drop for weblink/symlink content fields
- [#3636] Fix issue with empty values on options in list/dropdown/checkbox/radio TVs
- [#4024] Fix issue with display value not always showing for list properties in element property grid
- [#4056], [#4041] Add xtype password, template, user, usergroup, etc to available xtypes for System Settings
- [#3350] Improvements to bugfix for PHP bug 53632
- [#4054] Improve select binding to be able to use Resource fields via placeholders
- [#142] Add modResource.setTVValue API method
- [#4021] Add system setting to allow setting of a custom favicon for the manager
- [#3589] Fix issue with Static Resource paths when using custom filemanager_path
- [#4040] Fix issue where Users were always created as active in mgr UI
- [#4043] Enable drag/drop of users and groups in User Group tree
- [#4052] Fix issues with element property import and invalid characters causing freezing in UI
- [#4042] Fix issue in phpThumb base class preventing far property from working
- [#4049] Add resource_tree_node_tooltip for controlling field in Resource Tree tooltip
- [#3511], [#2964], [#3601] Fix issues regarding form customization and Templates by removing ajax loading of TVs in Resource panels
- Consolidate JS for derivative Resource panels to allow to inherit from main Resource panel
- Add context param to modx.getParentIds
- [#3754] Ensure Resources can not have their parent set as one of their descendants
- Add context param to modX.getChildIds
- [#3612] Improve CDATA filter to not add spaces at beginning or end
- [#3764] Add delete to actionbar on Resource edit panel