@@ -43,6 +43,8 @@ class modTransportProvider extends xPDOSimpleObject {
 
         $params = array_merge(array(
             'api_key' => $this->get('api_key'),
+            'username' => $this->get('username'),
+            'uuid' => $this->xpdo->uuid,
             'revolution_version' => $productVersion,
         ),$params);
         return $this->xpdo->rest->request($this->get('service_url'),$path,$method,$params);
