@@ -12,6 +12,7 @@ $xpdo_meta_map['modTransportProvider']= array (
     'name' => NULL,
     'description' => NULL,
     'service_url' => NULL,
+    'username' => '',
     'api_key' => '',
     'created' => NULL,
     'updated' => NULL,
@@ -37,6 +38,15 @@ $xpdo_meta_map['modTransportProvider']= array (
       'dbtype' => 'nvarchar',
       'precision' => '512',
       'phptype' => 'string',
+    ),
+    'username' => 
+    array (
+      'dbtype' => 'nvarchar',
+      'precision' => '255',
+      'phptype' => 'string',
+      'null' => false,
+      'default' => '',
+      'index' => 'index',
     ),
     'api_key' => 
     array (
@@ -86,6 +96,22 @@ $xpdo_meta_map['modTransportProvider']= array (
       'columns' => 
       array (
         'api_key' => 
+        array (
+          'length' => '',
+          'collation' => 'A',
+          'null' => false,
+        ),
+      ),
+    ),
+    'username' => 
+    array (
+      'alias' => 'username',
+      'primary' => false,
+      'unique' => false,
+      'type' => 'BTREE',
+      'columns' => 
+      array (
+        'username' => 
         array (
           'length' => '',
           'collation' => 'A',
